--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -4,6 +4,7 @@
       <div class="card bg-dark border-0 rounded-3 shadow-lg">
         <div class="card-body p-5">
           <div class="row align-items-center">
+
             <!-------------------Bal oldali szöveg-------------->
             <div class="col-lg-6">
               <h2
@@ -15,6 +16,7 @@
               <p class="text-white text-justify">{{lang.data.about_us_3p}}</p>
               <p class="text-white text-justify">{{lang.data.about_us_4p}}</p>
             </div>
+
             <!-----------------Csapat kép-------------------->
             <div class="col-lg-6 text-center">
               <img
@@ -27,12 +29,14 @@
       </div>
     </div>
   </div>
+  
   <!------------------Vélemény és Carousel---------->
   <div class="row gx-4 gx-lg-5 justify-content-center mt-5">
     <div class="col-lg-12">
       <div class="card bg-dark text-white rounded-3 shadow-lg">
         <div class="card-body p-5">
           <div class="row align-items-stretch">
+
             <!--------------Bal oldali űrlap----------------->
             <div class="col-lg-6 d-flex flex-column justify-content-between">
               <h2 class="text-warning fw-bold mb-4">
@@ -43,6 +47,7 @@
                 ng-submit="submitFeedback()"
                 novalidate
                 class="h-100 d-flex flex-column justify-content-between">
+
                 <!---------------Név----------------------------->
                 <div class="mb-3">
                   <label for="name" class="form-label">
@@ -55,6 +60,7 @@
                     ng-model="feedback.name"
                     required>
                 </div>
+
                 <!---------------Nem választó-------------------->
                 <div class="mb-3">
                   <label class="form-label"> {{lang.data.gender}} </label>
@@ -80,6 +86,7 @@
                     </label>
                   </div>
                 </div>
+
                 <!----------------Kor-------------------------->
                 <div class="mb-3">
                   <label for="age" class="form-label">
@@ -93,6 +100,7 @@
                     min="1"
                     required>
                 </div>
+
                 <!----------------Értékelés-------------------->
                 <div class="mb-3">
                   <label> {{lang.data.rating}} </label>
@@ -106,6 +114,7 @@
                     ng-class="{'hovered': star <= hoverRating, 'checked': star <= feedback.rating}">
                   </span>
                 </div>
+
                 <!---------------Vélemény------------------------>
                 <div class="mb-3">
                   <label for="comment" class="form-label">
@@ -119,19 +128,23 @@
                     required>
                   </textarea>
                 </div>
-                <button type="submit" class="btn btn-warning w-100">
+                <button type="submit" 
+                        class="btn btn-warning w-100">
                   {{lang.data.opinion_send}}
                 </button>
               </form>
             </div>
+
             <!-----------------Elégedett kép--------------->
             <div
               class="col-lg-6 d-flex flex-column justify-content-between text-center">
+
               <!-- Kép -->
               <img
                 ng-src="{{satisfied_img}}"
                 class="img-fluid rounded-3 shadow-lg mb-4"
                 style="max-height: 250px; object-fit: cover">
+
               <!-----------------Carousel-------------------->
               <div
                 id="feedbackCarousel"
@@ -147,10 +160,12 @@
                       style="min-height: 300px">
                       <div
                         class="card-body d-flex flex-column justify-content-between">
+
                         <!----------------Név és nem ikon-------------------->
                         <div class="d-flex align-items-center mb-3">
                           <img
-                            ng-src="{{fb.gender === 'M' ? './media/image/male-blank.webp' : './media/image/female-blank.webp'}}"
+                            ng-src="{{fb.gender === 'M' ? './media/image/male-blank.webp' : 
+                                    './media/image/female-blank.webp'}}"
                             width="50"
                             height="50"
                             class="rounded-circle me-3 border border-light">
@@ -163,15 +178,18 @@
                             </span>
                           </h5>
                         </div>
+
                         <!----------------Görgethető vélemény------------------>
                         <div
-                          class="flex-grow-1 bg-secondary text-white p-3 rounded overflow-auto">
+                          class="flex-grow-1 bg-secondary text-white 
+                                  p-3 rounded overflow-auto">
                           <p class="card-text m-0">{{fb.comment}}</p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+
                 <!----------------Navigáció----------------------------->
                 <button
                   class="carousel-control-prev"
@@ -182,7 +200,9 @@
                     class="carousel-control-prev-icon"
                     aria-hidden="true">
                   </span>
-                  <span class="visually-hidden"> Előző </span>
+                  <span class="visually-hidden"> 
+                    Előző 
+                  </span>
                 </button>
                 <button
                   class="carousel-control-next"
@@ -193,7 +213,9 @@
                     class="carousel-control-next-icon"
                     aria-hidden="true">
                   </span>
-                  <span class="visually-hidden"> Következő </span>
+                  <span class="visually-hidden"> 
+                    Következő 
+                  </span>
                 </button>
               </div>
             </div>
