--- a/html/home.html
+++ b/html/home.html
@@ -1,11 +1,13 @@
 <!--------- Oldal_tartalom-------------------------------------->
 <div class="container px-4 px-lg-5">
+
 <!---------- Fejléc_sor (Videó + Szöveg egy kártyában) --------->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-12">
       <div class="card bg-dark text-white rounded-3 shadow-lg">
         <div class="card-body p-4">
           <div class="row align-items-center">  
+
 <!--------- Bemutatkozó videó -------------------------->
             <div class="col-lg-7 text-center">
               <video autoplay muted loop playsinline 
@@ -15,6 +17,7 @@
                 {{lang.data.services_video_alert}}
               </video>
             </div>
+
 <!------------------- Bemutatkozó szöveg ------------------>
             <div class="col-lg-5">
               <h1 class="fw-bold display-5 text-warning text-center">
@@ -33,6 +36,7 @@
       </div>
     </div>
   </div>
+
 <!--------- Szolgáltatás cardok -------------------->
   <div class="row gx-4 gx-lg-5 mb-5">
     <div class="col-md-4" 
@@ -40,12 +44,17 @@
       <div class="card h-100 text-center border shadow-lg order">
         <div class="card-body">
           <i class="{{card.icon}} fa-3x mb-3"></i>
-          <h2 class="card-title">{{card.title}}</h2>
-          <p class="card-text text-justify">{{card.text}}</p>
+          <h2 class="card-title">
+            {{card.title}}
+          </h2>
+          <p class="card-text text-justify">
+            {{card.text}}
+          </p>
         </div>
       </div>
     </div>
   </div>
+
   <!----------------- Hűség card ---------------------->
   <div>
     <div class="card bg-dark border-0 rounded-3 h-100">
@@ -53,13 +62,15 @@
         <div class="p-4">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <h2 class="text-warning fw-bold display-6 text-center text-lg-start mt-3">
+              <h2 class="text-warning fw-bold display-6 
+                         text-center text-lg-start mt-3">
                 {{lang.data.loyalty_title}}
               </h2>
               <p class="text-justify text-lg-start">
                 {{lang.data.vip_text}}
               </p>
             </div>
+            
 <!----------------- VIP Kép szekció ------------------------>
             <div class="col-lg-6 text-center">
               <img
