--- a/html/register.html
+++ b/html/register.html
@@ -1,10 +1,12 @@
-<div class="container vh-100 d-flex justify-content-center align-items-center my-5">
-  <div class="card shadow-lg text-white w-75" style="border-radius: 15px; overflow: hidden;">
+<div class="container vh-100 d-flex justify-content-center
+            align-items-center my-5">
+  <div class="card shadow-lg text-white w-75" 
+       style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
+
 <!-----------------Regisztrációs Form--------------------------->
-      <div 
-        class="col-12 p-5 d-flex flex-column justify-content-center"
-        ng-style="{'background-image': 'url(' + registration_bg + ')', 
+      <div class="col-12 p-5 d-flex flex-column justify-content-center"
+            ng-style="{'background-image': 'url(' + registration_bg + ')', 
                    'background-size': 'cover', 
                    'background-position': 'center', 
                    'background-repeat': 'no-repeat'}">
@@ -16,11 +18,14 @@
         </h3>
         <form name="registerForm" novalidate>
           <div class="row">
+
 <!------------------------Bal oldal--------------------->
             <div class="col-md-6">
+
 <!------------------------Vezetéknév-------------------->
               <div class="mb-3">
-                <label for="register-last_name" class="form-label text-white">
+                <label for="register-last_name" 
+                       class="form-label text-white">
                   <i class="fa-solid fa-user me-1"></i> 
                   {{lang.data.last_name}}:
                 </label>
@@ -34,15 +39,18 @@
                   maxlength="100"
                   ng-model="model.register.last_name">
               </div>
+
 <!-------------------------Keresztnév---------------------->
               <div class="mb-3">
-                <label for="register-first_name" class="form-label text-white">
+                <label for="register-first_name" 
+                       class="form-label text-white">
                   <i class="fa-solid fa-user me-1"></i> 
                   {{lang.data.first_name}}:
                 </label>
                 <input 
                   id="register-first_name"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white 
+                         border-secondary rounded"
                   name="first_name" 
                   type="text"
                   placeholder="{{lang.data.first_name}}"
@@ -50,15 +58,18 @@
                   maxlength="100"
                   ng-model="model.register.first_name">
               </div>
+
 <!--------------------------Születési idő---------------------->
               <div class="mb-3">
-                <label for="register-born" class="form-label text-white">
+                <label for="register-born" 
+                       class="form-label text-white">
                   <i class="fa-solid fa-calendar-days me-1"></i> 
                   {{lang.data.born}}:
                 </label>
                 <input 
                   id="register-born"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white 
+                         border-secondary rounded"
                   name="born" 
                   type="date"
                   max="{{helper.maxBorn}}"
@@ -69,9 +80,11 @@
                   ng-clear-icon
                   ng-model="model.register.born">
               </div>
+
 <!--------------------------Telefonszám------------------------->
               <div class="mb-3">
-                <label for="register-phone" class="form-label text-white">
+                <label for="register-phone" 
+                       class="form-label text-white">
                   <i class="fa-solid fa-mobile-screen me-1"></i> 
                   {{lang.data.phone}}:
                 </label>
@@ -81,7 +94,8 @@
                     name="countryCode"
                     type="text"
                     placeholder="+36"
-                    class="form-control bg-dark text-white border-secondary rounded"
+                    class="form-control bg-dark text-white
+                           border-secondary rounded"
                     autocomplete="off"
                     maxlength="10"
                     ng-model="model.register.countryCode"
@@ -91,13 +105,15 @@
                     name="phone"
                     type="tel"
                     placeholder="{{lang.data.phone}}"
-                    class="form-control bg-dark text-white border-secondary rounded"
+                    class="form-control bg-dark text-white 
+                           border-secondary rounded"
                     autocomplete="off"
                     maxlength="10"
                     ng-model="model.register.phone"
                     ng-pattern="/^[1-9][0-9]{6,9}$/">
                 </div>
               </div>
+
 <!-------------------------Neme-------------------------->
               <div class="mb-3">
                 <label class="form-label text-white">
@@ -132,12 +148,16 @@
                 </div>
               </div>
             </div>
+
 <!---------------------------Jobb oldal------------------------------->
             <div class="col-md-6">
+
 <!-----------------------------Email---------------------------------->
               <div class="mb-3">
-                <label for="register-email" class="form-label text-white">
-                  <i class="fa-solid fa-envelope me-1"></i> E-mail:
+                <label for="register-email" 
+                       class="form-label text-white">
+                  <i class="fa-solid fa-envelope me-1"></i> 
+                  E-mail:
                 </label>
                 <input 
                   id="register-email"
@@ -148,6 +168,7 @@
                   required
                   ng-model="model.register.email">
               </div>
+
 <!-----------------------------Email megerősítés------------------------->
               <div class="mb-3">
                 <label for="register-emailConfirm" 
@@ -163,6 +184,7 @@
                   required
                   ng-model="model.register.emailConfirm">
               </div>
+
 <!-----------------------------Jelszó---------------------------------->
               <div class="mb-3">
                 <label for="register-password" 
@@ -172,23 +194,28 @@
                 </label>
                 <input 
                   id="register-password"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white 
+                         border-secondary rounded"
                   name="password" 
-                  type="{{model.register.showPassword ? 'text' : 'password'}}"
+                  type="{{model.register.showPassword ? 
+                         'text' : 'password'}}"
                   placeholder="{{lang.data.password}}"
                   required
                   minlength="6"
                   maxlength="20"
                   ng-model="model.register.password">
               </div>
+
 <!-------------------------Jelszó megerősítés--------------------------->
               <div class="mb-3">
-                <label for="register-passwordConfirm" class="form-label text-white">
+                <label for="register-passwordConfirm" 
+                       class="form-label text-white">
                   {{lang.data.password}} {{lang.data.confirmation}}:
                 </label>
                 <input 
                   id="register-passwordConfirm"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white
+                         border-secondary rounded"
                   name="passwordConfirm" 
                   type="{{model.register.showPassword ? 'text' : 'password'}}"
                   placeholder="{{lang.data.password}} {{lang.data.confirmation}}"
@@ -197,6 +224,7 @@
                   maxlength="20"
                   ng-model="model.register.passwordConfirm">
               </div>
+
 <!------------------------Jelszó mutat elrejt check-------------------->
               <div class="form-check mb-3">
                 <input 
@@ -212,6 +240,7 @@
               </div>
             </div>
           </div>
+          
 <!-----------------------Regisztráció Gomb------------------------->
           <div class="text-center">
             <button 
