--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,10 @@
-<div class="container vh-100 d-flex justify-content-center align-items-center">
-  <div class="card shadow-lg text-white col-md-6 col-lg-4" style="border-radius: 15px; overflow: hidden;">
+<div class="container vh-100 
+            d-flex justify-content-center
+            align-items-center">
+  <div class="card shadow-lg text-white col-md-6 col-lg-4" 
+       style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
+
 <!----------------Bejelentkezés form---------------->
       <div 
         class="col-12 p-5 d-flex flex-column justify-content-center"
@@ -14,15 +18,18 @@
             {{lang.data.login}}
           </span>
         </h3>
+
 <!---------------Üzenet, ha nincs fiókja----------->
         <p class="text-center text-warning text-decoration-underline mb-3">
           {{lang.data.login_do_account}}
         </p>
         <form name="loginForm" 
               novalidate>
+
 <!--------------------Email------------------------>
           <div class="mb-3">
-            <label for="login-email" class="form-label text-white">
+            <label for="login-email" 
+                   class="form-label text-white">
               <i class="fa-solid fa-star fa-2xs text-danger"></i>
               <i class="fa-solid fa-envelope me-1"></i> 
               E-mail
@@ -41,6 +48,7 @@
               ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
               ng-disable-space>
           </div>
+
 <!-------------Jelszó-------------------------->
           <div class="mb-3">
             <label for="login-password" class="form-label text-white">
@@ -64,6 +72,7 @@
               ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
               ng-disable-space>
           </div>
+
 <!--------------Mutat/elrejt jelszó-------------------->
           <div class="form-check mb-3">
             <input
@@ -77,6 +86,7 @@
               {{lang.data.passw_show}}
             </label>
           </div>
+          
 <!---------Bejelentkezés és Regisztráció gombok------>
           <div class="text-center">
             <button
