--- a/html/services.html
+++ b/html/services.html
@@ -1,18 +1,22 @@
 <div class="container px-4 px-lg-5">
+
   <!------ Fej sor: Videó és Szolgáltatás bemutató ------------->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-12">
       <div class="card bg-dark text-white rounded-3 shadow-lg">
         <div class="card-body p-4">
           <div class="row align-items-center">
+
 <!----------------Szolgáltatások videó----------------------->
             <div class="col-lg-6 text-center">
-              <video autoplay muted loop playsinline class="img-fluid rounded-3 shadow">
+              <video autoplay muted loop playsinline 
+                     class="img-fluid rounded-3 shadow">
                 <source ng-src="{{videoUrl}}" 
                         type="video/mp4">
                     {{lang.data.services_video_alert}}
               </video>
             </div>
+
 <!--------------Szolgáltatás csomag szűrők------------------->
             <div class="col-lg-6">
               <h1 class="fw-bold display-4 text-warning text-center">
@@ -21,6 +25,7 @@
               <p class="text-justify">
                 {{lang.data.services_p1}}
               </p>
+
 <!-----------------------Keresőmező-------------------------->
               <div class="mb-3">
                 <label for="searchInput" 
@@ -33,6 +38,7 @@
                        placeholder="{{lang.data.search}}" 
                        ng-model="searchText">
               </div>
+
 <!----------------Ár kategória legördülő menü---------------->
               <div class="mb-4">
                 <label for="priceSelect" 
@@ -54,11 +60,13 @@
       </div>
     </div>
   </div>
+
 <!---Figyelmeztető szöveg ha nincs a listában---------------->
 <div ng-if="groupedServices.length === 0" 
      class="alert alert-warning text-center mt-3">
   {{lang.data.search_alert}}
 </div>
+
 <!------------Carousel: Szűrt szolgáltatások----------------->
   <div id="serviceCarousel" 
        class="carousel slide" 
@@ -78,16 +86,25 @@
                      alt="{{service.services_name}}">
               </div>
               <div class="card-body rounded">
-                <h5 class="card-title">{{lang.data[service.services_name]}}</h5>
-                <p class="card-text">{{lang.data[service.description]}}</p>
-                <p class="fw-bold text-warning text-center">{{service.price | currency:'' :0}} Ft</p>
-                <button class="btn btn-warning w-100">{{lang.data.appointment_button}}</button>
+                <h5 class="card-title">
+                  {{lang.data[service.services_name]}}
+                </h5>
+                <p class="card-text">
+                  {{lang.data[service.description]}}
+                </p>
+                <p class="fw-bold text-warning text-center">
+                  {{service.price | currency:'' :0}} Ft
+                </p>
+                <button class="btn btn-warning w-100">
+                  {{lang.data.appointment_button}}
+                </button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <!---------------------Carousel gombok------------------->
     <button class="carousel-control-prev" 
             type="button" 
